syntax = "proto3";

package org.hse.nnbuilder.services;

service NNModificationServices {
  rpc modification (NNModificationRequest) returns (NNModificationResponse);
}

message NNModificationRequest {
  oneof nnmodification {
    int64 addLayer = 1;
    int64 delLayer = 2;
    int64 changeActivationFunction = 3;
    int64 changeNumberOfNeuron = 4;
  }
}

/// LAYERS
message NNModificationResponse {
  bool exception = 1;
}
